--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">    
+        <meta name="viewport" content="width=device-width, initial-scale=1">    
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
          <link rel="stylesheet" href="css/css.css" type="text/css" media="all" />
          <link rel="stylesheet" href="fontawesome-free/css/all.css" type="text/css" media="all" />
@@ -217,7 +217,9 @@
         <span></span>
         <span></span>
         <h1 class="profile">About Me</h1>
-        <p> I'm a hardworking individual who has<br> 3 years of working experience under my belt.<br>  I'm and aspire to be a Head Technician within <br>the next 3 years. I would like to attain <br>the said position because to help your company grow.<br>I am willing to show the company that I have <br>what it takes to thrive and succeed in this company </p>
+        <p class="p1"> I'm a hardworking individual who has<br> 3 years of working experience under my belt.<br>  I'm and aspire to be a Head Technician within <br>the next 3 years. I would like to attain <br>the said position because to help your company grow.<br>I am willing to show the company that I have <br>what it takes to thrive and succeed in this company </p>
+       <h3>Now</h3>
+       <p class="p2">Work At Al-Thulathia For Constructions</p>
     </div>
     <ul class="popup_list">
         <li></li>
