--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
+             <meta name="viewport" content="width=device-width, initial-scale=1">
                <meta http-equiv="content-type" content="text/html; charset=utf-8" />
              <link rel="stylesheet" href="css/css.css" type="text/css" media="all" />
              <link rel="stylesheet" href="fontawesome-free/css/all.css" type="text/css" media="all" />
