--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </div>
             <div class="conter-text">
                 <div class="contra_img">
-                   <img src="imgs/main_img.webp" alt="" /> 
+                   <img src="imgs/img1.jpg" alt="" /> 
                 </div>
                 <div class="contra">
                 <h2>Amr Ragab Ali Mohamed</h2>
